--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "pyp2req"
+description = "pyproject.toml to requirements.txt converter"
 dynamic = ["version"]
 requires-python = ">=3.8"
 authors = [
@@ -8,7 +9,12 @@ authors = [
 dependencies = [
     "tomli;python_version<'3.11'",
 ]
+readme = "README.md"
 scripts = { pyp2req = "pyp2req:main" }
+
+[project.urls]
+source = "https://github.com/JCGoran/pyp2req"
+
 
 [build-system]
 requires = ["setuptools", "setuptools-scm>=8.0.0"]
