--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
 
+      - name: Checkout project
+        uses: actions/checkout@v4
+
       - name: Build package
         run: SETUPTOOLS_SCM_PRETEND_VERSION=${{ inputs.version }} python3 -m pip wheel . --wheel-dir dist/ --no-deps
 
