--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Set up Python
         uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
       - name: Checkout project
         uses: actions/checkout@v4
@@ -31,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheel
-          path: ${{runner.workspace}}/dist/*.whl
+          path: dist/*.whl
 
       - name: Publish package distributions to test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
